# CrowdPose

./: README.md
crowdpose-api/PythonAPI/: pyproject.toml  setup.py
crowdpose-api/PythonAPI/crowdposetools/: _mask.pyx  coco.py  cocoeval.py
