[build-system]
requires = ["setuptools >= 60", "wheel", "Cython >= 0.29", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdposetools"
version = "2.0.1"
description = "crowdposetools with bug fix"
requires-python = ">=3.7"
dependencies = ["numpy"]

[tool.setuptools]
packages = { find = { where = ["crowdposetools"] } }
