[build-system]
requires = ["setuptools", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdposetools"
version = "2.0.1"
description = "Modernized crowdposetools with bug fix."
dependencies = ["numpy"]

[tool.setuptools]
packages = ["crowdposetools"]
package-dir = {crowdposetools = "crowdposetools"}
